# HtS

./: .gitignore  LICENSE  MANIFEST.in  PATCH_NOTES.md  README.md  compare_all.py  compare_results.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
benchmarks/: diag.py  kaggle_publication_b.py  kaggle_publication_c.py  kaggle_publication_c_dualgpu.py  kaggle_publication_d_dualgpu.py  kaggle_publication_d_oodfix.py  kaggle_validation_a.py  string_length_count.py
configs/: string_length_count.yaml
docs/: ARCHITECTURE.md  CUSTOM_MODEL_GROUPS.md  DUAL_GPU_KAGGLE.md  HUONG_DAN_SU_DUNG_VI.md  PUBLICATION_BENCHMARK.md  PUBLICATION_BENCHMARK_C.md  PUBLICATION_BENCHMARK_D_OODFIX.md
examples/: compare_hts_transformer.py  custom_group.py  quick_start.py  train_adaptive_basis.py  train_synthetic.py
hts/: __init__.py  cli.py  config.py  device.py  diagnostics.py  layers.py  losses.py  models.py  training.py
hts/data/: __init__.py  compositional_tasks.py  multi_step_reasoning.py  string_length_tasks.py  synthetic_tasks.py
scripts/: run_cpu.sh  run_gpu.sh  run_tpu.sh
src/hts_b12/: __init__.py  cli.py  config.py  device.py  diagnostics.py  groups.py  layers.py  losses.py  modeling.py  ood_heads.py  presets.py  training.py
src/hts_b12/data/: __init__.py  prime_tasks.py  string_tasks.py
tests/: test_compositional.py  test_config.py  test_device.py  test_diagnostics.py  test_layers.py  test_losses.py  test_models.py  test_multi_step.py  test_smoke.py  test_string_length.py  test_synthetic_tasks.py  test_training.py
